--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run Postman Tests
-        uses: matt-ball/newman-action@v1
+        uses: matt-ball/newman-action@master
         with:
           collection: tests/postman_collection.json
           environment: tests/postman_environment.json
