--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,7 @@ jobs:
     name: Run API Tests (Postman)
     runs-on: ubuntu-latest
     needs: test
+    if: hashFiles('tests/postman_collection.json') != ''
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
