--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
 
         - name: Run Postman Tests
           if: env.exists == 'true'
-          uses: matt-ball/newman-action@v1
+          uses: matt-ball/newman-action@master
           with:
             collection: tests/postman_collection.json
             environment: tests/postman_environment.json
