Configured DbContext in API project

--- a/src/BookingSystem.Web/appsettings.Development.json
+++ b/src/BookingSystem.Web/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Booking.db;Version=3;BinaryGUID=True;"
   }
 }
