--- a/src/BookingSystem.Web/BookingSystem.Web.csproj
+++ b/src/BookingSystem.Web/BookingSystem.Web.csproj
@@ -21,4 +21,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookingSystem.Data\BookingSystem.Data.csproj" />
+  </ItemGroup>
+
 </Project>
