--- a/src/BookingSystem.Data/BookingSystem.Data.csproj
+++ b/src/BookingSystem.Data/BookingSystem.Data.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <NoWarn>SA1101</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
