--- a/src/BookingSystem.Core/BookingSystem.Core.csproj
+++ b/src/BookingSystem.Core/BookingSystem.Core.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="StyleCop.Analyzers.Unstable" Version="1.2.0.556">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
