--- a/src/BookingSystem.Web/BookingSystem.Web.csproj
+++ b/src/BookingSystem.Web/BookingSystem.Web.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BookingSystem.Core\BookingSystem.Core.csproj" />
     <ProjectReference Include="..\BookingSystem.Data\BookingSystem.Data.csproj" />
   </ItemGroup>
 
