--- a/src/BookingSystem.Web/appsettings.Development.json
+++ b/src/BookingSystem.Web/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Booking.db;Version=3;BinaryGUID=True;"
+    "DefaultConnection": "Data Source=Booking.db;"
   }
 }
